Fixed order details from order summary to be clearly visible
Workitems:
#11471 (UX) Delivery - Order Summary - order details are not clearly visible
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C25179

--- a/ShipTech10/app/assets/global/css/components.css
+++ b/ShipTech10/app/assets/global/css/components.css
@@ -27335,7 +27335,7 @@ Custom color buttons
 }
 
 .font-grey-silver {
-    color: #BFBFBF !important;
+    color: #333333 !important;
 }
 
 .bg-font-grey-silver {
